--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "webpack-dev-server": "3.11.0"
   },
   "dependencies": {
+    "@amcharts/amcharts4": "^4.10.17",
     "@fortawesome/fontawesome-free": "5.14.0",
     "axios": "^0.21.1",
     "bootstrap": "4.5.2",
